avoid flash of invisible text FOIT

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -3,11 +3,13 @@
         @font-face {
             font-family: 'Mockup';
             src: url("/fonts/Mockup-Regular.otf") format("opentype");
+            font-display: swap;
         }
 
         @font-face {
             font-family: "Ostrich Sans";
             src: url("/fonts/OstrichSans-Medium.otf") format("opentype");
+            font-display: swap;
         }
 
         body {
